  Thunar (and other file managers). Otherwise gtk complains (and potentially
  causes errors).
- Adding directories to a composition from within xfburn works again.
- Bump libburn version requirement to 0.5.6, since earlier versions might
  trigger a crash in libburn's fifo code. Version 0.4.2 or later will work,
  aside from this problem.
- Correctly detect some burners for which HAL reported unexpected values
- A man page is now included.


xfburn 0.4.0 (2008-12-20)
============-------------

- Display an error if gstreamer realizes a plugin is missing to decode a file
- Jean-François Wauthy officially retired as maintainer. Thank you for all the
  work, p0llux!
- Add symlink as symlink, and not the referenced files to a data composition
- Allow adding hidden files and devices to the composition through the
  command line (they are not shown in the file selector)
- Add an entry to Thunar's sendto menu for adding to a data composition
  (thanks Mike Massonnet)
- Add directories to a data composition with the correct timestamp 
  (thanks JR Oldroyd for discovering this)
- Stop button works now
- Drag and drop into an audio composition now adds files in the correct order
- Check that the size of the burn run actually fits on the inserted disc
- Internal and string improvements

xfburn 0.3.91 (2008-11-03)
=============------------

- Use gstreamer to decompress any supported audio files to burn an audio CD ("gst" transcoder)
  NOTE: support for this is new, and not too unlikely to have some bugs ;-)
- Burn audio CDs from uncompressed CD audio .wav files ("basic" transcoder)
- Allow drags and drop from file managers like Thunar (text/uri-list target)
- Require HAL if compiled with HAL support
- Try to unmount a drive if it is not accessible (requires thunar-vfs)
- Build list of drives initially from HAL, then fill in details using libburn
  once the burn dialog shows up

xfburn 0.3.2 (2008-07-15)
============-------------

- Also set burn speed when burning an image